k8s/n8n/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-route
  namespace: n8n
spec:
  parentRefs:
    - name: public
      namespace: envoy-gateway-system
  hostnames:
    - "n8n.neffi.fr"
  rules:
    - backendRefs:
        - name: n8n
          port: 5678
      matches:
        - path:
            type: PathPrefix
            value: /
